Improvements to Arabic by Ikrami Ahmad
with assistance from Bert.

- Add a lot of new symbols (algebra, geometry, Greek, etc.) to the
  grade 1 table.
- Change some symbols for less conflicts with grade 2.
- Implement letter sign / grade 1 indicator to cancel numbers and inhibit
  contractions when in grade 2.
- Improve back-translation.

--- a/tables/Makefile.am
+++ b/tables/Makefile.am
@@ -4,8 +4,10 @@ table_files = \
 	afr-za-g1.ctb \
 	afr-za-g2.ctb \
 	ar-ar-comp8.utb \
+	ar-ar-g1-core.uti \
 	ar-ar-g1.utb \
 	ar-ar-g2.ctb \
+	ar-ar-math.uti \
 	ar.tbl \
 	as-in-g1.utb \
 	as.tbl \
